// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LskDialogDelete should match snapshot: dialog not visible 1`] = `
<div role="dialog"
     class="v-dialog__container"
>
</div>
`;

exports[`LskDialogDelete should match snapshot: dialog visible 1`] = `
<div role="dialog"
     class="v-dialog__container"
>
  <div role="document"
       tabindex="0"
       class="v-dialog__content v-dialog__content--active"
       style="z-index: 202;"
  >
    <transition-stub name="dialog-transition"
                     appear="true"
    >
      <div class="v-dialog v-dialog--active v-dialog--persistent"
           style="transform-origin: center center; max-width: 700px;"
      >
        <span>
          <form novalidate="novalidate"
                class="v-form"
          >
            <div class="v-card v-sheet theme--light">
              <div id="TEST_CIDTitle"
                   class="v-card__title"
              >
                TEST TITLE (123)
              </div>
              <div class="v-card__text">
                <div>
                  <div class="v-input theme--light v-input--selection-controls v-input--checkbox">
                    <div class="v-input__control">
                      <div class="v-input__slot">
                        <div class="v-input--selection-controls__input">
                          <i aria-hidden="true"
                             class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                          >
                          </i>
                          <input aria-checked="false"
                                 id="TEST_CIDYesCheckboxInput"
                                 role="checkbox"
                                 type="checkbox"
                                 value
                          >
                          <div class="v-input--selection-controls__ripple">
                          </div>
                        </div>
                        <label for="TEST_CIDYesCheckboxInput"
                               class="v-label theme--light"
                               style="left: 0px; position: relative;"
                        >
                          TEST CHECKBOX LABEL
                        </label>
                      </div>
                      <div class="v-messages theme--light">
                        <transition-group-stub tag="div"
                                               name="message-transition"
                                               class="v-messages__wrapper"
                        >
                        </transition-group-stub>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div class="v-card__actions">
                <div class="spacer">
                </div>
                <button type="button"
                        class="v-btn v-btn--has-bg theme--light v-size--small primary"
                        id="TEST_CIDCancelButton"
                >
                  <span class="v-btn__content">
                    Cancel
                  </span>
                </button>
                <button type="button"
                        disabled="disabled"
                        class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--small"
                        id="TEST_CIDDeleteButton"
                >
                  <span class="v-btn__content">
                    Delete
                  </span>
                </button>
              </div>
            </div>
          </form>
        </span>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`LskDialogDelete should match snapshot: error messages 1`] = `
<div role="dialog"
     class="v-dialog__container"
>
  <div role="document"
       tabindex="0"
       class="v-dialog__content v-dialog__content--active"
       style="z-index: 202;"
  >
    <transition-stub name="dialog-transition"
                     appear="true"
    >
      <div class="v-dialog v-dialog--active v-dialog--persistent"
           style="transform-origin: center center; max-width: 700px;"
      >
        <span>
          <form novalidate="novalidate"
                class="v-form"
          >
            <div class="v-card v-sheet theme--light">
              <div id="TEST_CIDTitle"
                   class="v-card__title"
              >
                TEST TITLE (123)
              </div>
              <div class="v-card__text">
                <div>
                  <div class="v-input v-input--has-state theme--light v-input--selection-controls v-input--checkbox error--text">
                    <div class="v-input__control">
                      <div class="v-input__slot">
                        <div class="v-input--selection-controls__input">
                          <i aria-hidden="true"
                             class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light error--text"
                          >
                          </i>
                          <input aria-checked="false"
                                 id="TEST_CIDYesCheckboxInput"
                                 role="checkbox"
                                 type="checkbox"
                                 value
                          >
                          <div class="v-input--selection-controls__ripple error--text">
                          </div>
                        </div>
                        <label for="TEST_CIDYesCheckboxInput"
                               class="v-label theme--light error--text"
                               style="left: 0px; position: relative;"
                        >
                          TEST CHECKBOX LABEL
                        </label>
                      </div>
                      <div class="v-messages theme--light error--text"
                           role="alert"
                      >
                        <transition-group-stub tag="div"
                                               name="message-transition"
                                               class="v-messages__wrapper"
                        >
                          <div class="v-messages__message">
                            Required
                          </div>
                        </transition-group-stub>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="red--text font-weight-bold">
                  API ERROR
                </div>
              </div>
              <div class="v-card__actions">
                <div class="spacer">
                </div>
                <button type="button"
                        class="v-btn v-btn--has-bg theme--light v-size--small primary"
                        id="TEST_CIDCancelButton"
                >
                  <span class="v-btn__content">
                    Cancel
                  </span>
                </button>
                <button type="button"
                        disabled="disabled"
                        class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--small"
                        id="TEST_CIDDeleteButton"
                >
                  <span class="v-btn__content">
                    Delete
                  </span>
                </button>
              </div>
            </div>
          </form>
        </span>
      </div>
    </transition-stub>
  </div>
</div>
`;
